<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="deviceId"
        android:title="@string/device_identification_title">
        <EditTextPreference
            android:key="location"
            android:summary="@string/provide_location"
            android:title="@string/set_location" />
        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="number"
            android:summary="@string/provide_id_number"
            android:title="@string/set_id_number" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="flip_time"
        android:title="@string/timing_title">
        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="duration"
            android:summary="@string/provide_flip_time"
            android:title="@string/set_flip_time" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="tag"
        android:title="@string/tag_title">
        <EditTextPreference
            android:inputType="text"
            android:key="hashtag"
            android:defaultValue="goldengate"
            android:summary="@string/provide_tags"
            android:title="@string/set_tags" />
    </PreferenceCategory>
</PreferenceScreen>